[package]
name = "dtree"
version = "0.1.0"
authors = ["remipetitjean <remi.petitjean@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "^0.5"
tokio = { version = "^1", features = ["full"] }
